Cambio la línea 5 y otra pa aserme el shulo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
-<head>
-</head>
+<head></head>
 <body>
-<h1>Proyecto GitHub</h1>
+<h1>Proyecto de GitHub</h1>
 </body>
 </html>
